Fix alignment in recent searches

--- a/src/pages/search.css
+++ b/src/pages/search.css
@@ -253,5 +253,6 @@ ul.link-list.hashtag-list li a {
     background-color: var(--link-bg-color);
     unicode-bidi: isolate;
     direction: initial;
+    vertical-align: unset;
   }
 }
